[package]
name = "direct3d11"
version = "0.3.0-alpha2"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
repository = "https://github.com/Connicpu/direct3d11-rs"
documentation = "https://docs.rs/direct3d11/*/x86_64-pc-windows-msvc/direct3d11/"
license = "MIT/Apache-2.0"
description = """
Safe Direct3D 11 bindings. Currently just a minimal implementation mostly for
use with direct2d, but I plan to flesh out the API eventually. If you're
excited by this project and would like to contribute, pull requests are always
open.
"""
edition = "2018"
workspace = ".."

[target.'cfg(windows)'.dependencies]
wio = "0.2"
checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"
com-wrapper = "0.1.0-alpha2"
derive-com-wrapper = "0.1.0-alpha4"

[target.'cfg(windows)'.dependencies.dcommon]
version = "0.3.0-alpha1"
path = "../dcommon"

[target.'cfg(windows)'.dependencies.dxgi]
version = "0.3.0-alpha3"
path = "../dxgi"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["d3d11", "winerror"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
